; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_rtd119x_wdt.c_rtd119x_wdt_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_rtd119x_wdt.c_rtd119x_wdt_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.rtd119x_watchdog_device = type { i64 }

@RTD119X_TCWCR = common dso_local global i64 0, align 8
@RTD119X_TCWCR_WDEN_MASK = common dso_local global i32 0, align 4
@RTD119X_TCWCR_WDEN_DISABLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @rtd119x_wdt_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtd119x_wdt_stop(%struct.watchdog_device* %0) #0 {
  %2 = alloca %struct.watchdog_device*, align 8
  %3 = alloca %struct.rtd119x_watchdog_device*, align 8
  %4 = alloca i32, align 4
  store %struct.watchdog_device* %0, %struct.watchdog_device** %2, align 8
  %5 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %6 = call %struct.rtd119x_watchdog_device* @watchdog_get_drvdata(%struct.watchdog_device* %5)
  store %struct.rtd119x_watchdog_device* %6, %struct.rtd119x_watchdog_device** %3, align 8
  %7 = load %struct.rtd119x_watchdog_device*, %struct.rtd119x_watchdog_device** %3, align 8
  %8 = getelementptr inbounds %struct.rtd119x_watchdog_device, %struct.rtd119x_watchdog_device* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @RTD119X_TCWCR, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @readl_relaxed(i64 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* @RTD119X_TCWCR_WDEN_MASK, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* %4, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* @RTD119X_TCWCR_WDEN_DISABLED, align 4
  %18 = load i32, i32* %4, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.rtd119x_watchdog_device*, %struct.rtd119x_watchdog_device** %3, align 8
  %22 = getelementptr inbounds %struct.rtd119x_watchdog_device, %struct.rtd119x_watchdog_device* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @RTD119X_TCWCR, align 8
  %25 = add nsw i64 %23, %24
  %26 = call i32 @writel(i32 %20, i64 %25)
  ret i32 0
}

declare dso_local %struct.rtd119x_watchdog_device* @watchdog_get_drvdata(%struct.watchdog_device*) #1

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
